Ajout des liens vers les clients et les ventes dans le menu principal

--- a/src/CoreBundle/Resources/views/layout.html.twig
+++ b/src/CoreBundle/Resources/views/layout.html.twig
@@ -21,13 +21,13 @@
                             </li>
 
                             <li>
-                                <a href="{{ path('core_homepage') }}">
+                                <a href="{{ path('a2_sale_index') }}">
                                     <i class="fa fa-dashboard fa-lg"></i> Ventes
                                 </a>
                             </li>
 
                             <li>
-                                <a href="{{ path('core_homepage') }}">
+                                <a href="{{ path('a2_customer_index') }}">
                                     <i class="fa fa-dashboard fa-lg"></i> Clients
                                 </a>
                             </li>
