Finalisation de la methode d'enregistrement de vente avec un nouveau client

--- a/src/A2/CustomerBundle/Resources/views/Customer/index.html.twig
+++ b/src/A2/CustomerBundle/Resources/views/Customer/index.html.twig
@@ -25,7 +25,7 @@
             </th>
         </tr>
 
-        {% for car in cars %}
+        {% for customer in customers %}
             <tr>
                 <td>
                     {{ customer.name }}
