--- a/src/A2/CustomerBundle/Resources/views/Customer/sale.html.twig
+++ b/src/A2/CustomerBundle/Resources/views/Customer/sale.html.twig
@@ -23,7 +23,7 @@
         </div>
     </div>
 
-    <p><a href="{{ path('a2_car_sold', { 'id': car.id }) }}">Annuler</a></p>
+    <p><a href="{{ path('a2_car_sold', { 'id': id }) }}">Annuler</a></p>
 
     {{ form_end(customer_form) }}
 
