J'e ne peux pas apporter de precision sur tous les fichiers que jai touche mais le but etait la recuperations des voitures achetes par le client

--- a/src/A2/CarBundle/Resources/views/Car/index.html.twig
+++ b/src/A2/CarBundle/Resources/views/Car/index.html.twig
@@ -48,7 +48,9 @@
                 </td>
                 <td>
                     <a href="{{ path('a2_car_show', { 'id': car.id }) }}">Détails</a> |
-                    <a href="{{ path('a2_car_edit', { 'id': car.id }) }}">Modifier</a> |
+                    {% if car.isSold == false %}
+                        <a href="{{ path('a2_car_edit', { 'id': car.id }) }}">Modifier</a> |
+                    {% endif %}
                     <a href="{{ path('a2_car_delete', { 'id': car.id }) }}">Supprimer</a>
                 </td>
             </tr>
