--- a/src/A2/CustomerBundle/Resources/views/Customer/edit.html.twig
+++ b/src/A2/CustomerBundle/Resources/views/Customer/edit.html.twig
@@ -24,16 +24,16 @@
             </div>
         </div>
         <div class="form-group">
-            {{ form_label(form.bday, "Date de naissance", {'label_attr': {'class': 'control-label col-md-2'}}) }}
-            {{ form_errors(form.bday) }}
+            {{ form_label(edit_form.bday, "Date de naissance", {'label_attr': {'class': 'control-label col-md-2'}}) }}
+            {{ form_errors(edit_form.bday) }}
             <div class="col-md-3">
-                {{ form_widget(form.bday.day, {'attr': {'class': 'form-control', 'value': customer.bday.day }}) }}
+                {{ form_widget(edit_form.bday.day, {'attr': {'class': 'form-control', 'value': customer.bday|date("d") }}) }}
             </div>
             <div class="col-md-4">
-                {{ form_widget(form.bday.month, {'attr': {'class': 'form-control', 'value': customer.bday.month }}) }}
+                {{ form_widget(edit_form.bday.month, {'attr': {'class': 'form-control', 'value': customer.bday|date("m") }}) }}
             </div>
             <div class="col-md-3">
-                {{ form_widget(form.bday.year, {'attr': {'class': 'form-control', 'value': customer.bday.year }}) }}
+                {{ form_widget(edit_form.bday.year, {'attr': {'class': 'form-control', 'value': customer.bday|date("Y") }}) }}
             </div>
         </div>
         <div class="form-group">
