--- a/src/A2/SaleBundle/Resources/views/Sale/delete.html.twig
+++ b/src/A2/SaleBundle/Resources/views/Sale/delete.html.twig
@@ -34,7 +34,7 @@
                 Date de vente
             </dt>
             <dd>
-                {{ sale.dateAdd }}
+                {{ sale.dateAdd|date("d/m/Y h:m:s") }}
             </dd>
 
             <dt>
