Ajout du code pour la diminution du stock lors d'une vente

--- a/src/A2/CarBundle/Resources/views/Car/edit.html.twig
+++ b/src/A2/CarBundle/Resources/views/Car/edit.html.twig
@@ -114,7 +114,7 @@
         </div>
     </div>
 
-    <p><a href="{{ path('a2_category_index') }}">Retour à la liste</a></p>
+    <p><a href="{{ path('a2_car_index') }}">Retour à la liste</a></p>
 
     {{ form_end(edit_form) }}
 
