--- a/src/A2/ModelBundle/Resources/views/Model/delete.html.twig
+++ b/src/A2/ModelBundle/Resources/views/Model/delete.html.twig
@@ -24,6 +24,13 @@
             </dd>
 
             <dt>
+                Valeur d'alerte
+            </dt>
+            <dd>
+                {{ model.alertValue }}
+            </dd>
+
+            <dt>
                 Administateur d'ajout
             </dt>
             <dd>
