--- a/src/A2/ModelBundle/Resources/views/Model/show.html.twig
+++ b/src/A2/ModelBundle/Resources/views/Model/show.html.twig
@@ -22,6 +22,13 @@
             </dd>
 
             <dt>
+                Valeur d'alerte
+            </dt>
+            <dd>
+                {{ model.alertValue }}
+            </dd>
+
+            <dt>
                 Administateur d'ajout
             </dt>
             <dd>
