Modif mineur pour reussir  a afficher les logos dans l'accueil

--- a/src/CoreBundle/Resources/views/Core/accueil.html.twig
+++ b/src/CoreBundle/Resources/views/Core/accueil.html.twig
@@ -11,9 +11,10 @@
             {% if modelsAReguler != null %}
                 <div class="row">
                     <div class="col-md-3">
-                        <img src="../../../../../web/img/378px-Avertissement_orange.svg.png" width="100" height="100" />
+                        <img src="/supercarapp/img/378px-Avertissement_orange.svg.png" width="100" height="100" />
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-md-1"></div>
+                    <div class="col-md-8">
                         <h3 style="color: red">De nouvelles commandes sont à passer !</h3>
                     </div>
                 </div>
@@ -27,9 +28,10 @@
             {% else %}
                 <div class="row">
                     <div class="col-md-3">
-                        <img src="../../../../../web/img/smiley-face-png-96527038_o.png" width="100" height="100" />
+                        <img src="/supercarapp/img/smiley-face-png-96527038_o.png" width="100" height="100" />
                     </div>
-                    <div class="col-md-9">
+                    <div class="col-md-1"></div>
+                    <div class="col-md-8">
                         <h3 style="color: blue">Aucune notification personnelle</h3>
                     </div>
                 </div>
