Completion d'informations explicative de l'application sur l'ecran de connexion

--- a/src/A2/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/A2/UserBundle/Resources/views/Security/login.html.twig
@@ -8,6 +8,14 @@
         <p>
             Projet par HADJI Mohamed Allam.
         </p>
+        <p>
+            Supercar est une application web permettant à un concessionnaire automobile de gérer le stock <br />
+            des véhicules par rapport aux différentes ventes dans les différents entrepôts <br />
+            Le concept est l'utilisation de l'application par 3 différents type d'utilisateur :
+        </p>
+        <p style="margin-left: 30px"> - L'administrateur, chargé de passer les différentes commandes et avoir un oeil sur l'ensemble des activités (Username : A2lam mdp : Ad001234)</p>
+        <p style="margin-left: 30px"> - Le manager, dirige un entrepôt et complète les informations concernant les arrivages dans son entrepôt (<span style="color: red">Non disponibe pour le moment</span>)</p>
+        <p style="margin-left: 30px"> - Le vendeur, travail dans un entrepôt et procède à des ventes de voitures (<span style="color: red">Non disponibe pour le moment</span>)</p>
 
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
