Ajout du lien vers les utilisateurs dans le menu

--- a/src/CoreBundle/Resources/views/layout.html.twig
+++ b/src/CoreBundle/Resources/views/layout.html.twig
@@ -73,7 +73,7 @@
                             </li>
 
                             <li>
-                                <a href="{{ path('core_homepage') }}">
+                                <a href="{{ path('a2_user_index') }}">
                                     <i class="fa fa-dashboard fa-lg"></i> Utilisateurs
                                 </a>
                             </li>
