--- a/src/A2/UserBundle/Resources/views/User/show.html.twig
+++ b/src/A2/UserBundle/Resources/views/User/show.html.twig
@@ -1,64 +1,84 @@
-{% extends 'base.html.twig' %}
+{% extends "CoreBundle::layout.html.twig" %}
 
-{% block body %}
-    <h1>User</h1>
+{% block content %}
 
-    <table>
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ user.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ user.name }}</td>
-            </tr>
-            <tr>
-                <th>Lastname</th>
-                <td>{{ user.lastname }}</td>
-            </tr>
-            <tr>
-                <th>Bday</th>
-                <td>{% if user.bday %}{{ user.bday|date('Y-m-d H:i:s') }}{% endif %}</td>
-            </tr>
-            <tr>
-                <th>Num</th>
-                <td>{{ user.num }}</td>
-            </tr>
-            <tr>
-                <th>Adminadd</th>
-                <td>{{ user.adminAdd }}</td>
-            </tr>
-            <tr>
-                <th>Dateadd</th>
-                <td>{% if user.dateAdd %}{{ user.dateAdd|date('Y-m-d H:i:s') }}{% endif %}</td>
-            </tr>
-            <tr>
-                <th>Userupdate</th>
-                <td>{{ user.userUpdate }}</td>
-            </tr>
-            <tr>
-                <th>Dateupdate</th>
-                <td>{% if user.dateUpdate %}{{ user.dateUpdate|date('Y-m-d H:i:s') }}{% endif %}</td>
-            </tr>
-            <tr>
-                <th>Isactive</th>
-                <td>{% if user.isActive %}Yes{% else %}No{% endif %}</td>
-            </tr>
-        </tbody>
-    </table>
+    <h2>Détails de l'utilisateur</h2>
 
-    <ul>
-        <li>
-            <a href="{{ path('user_index') }}">Back to the list</a>
-        </li>
-        <li>
-            <a href="{{ path('user_edit', { 'id': user.id }) }}">Edit</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
-{% endblock %}
+    <div>
+        <hr/>
+        <dl class="dl-horizontal">
+            <dt>
+                Nom
+            </dt>
+            <dd>
+                {{ user.name }}
+            </dd>
+
+            <dt>
+                Prénom
+            </dt>
+            <dd>
+                {{ user.lastname }}
+            </dd>
+
+            <dt>
+                Date de naissance
+            </dt>
+            <dd>
+                {{ user.bday|date("d/m/Y h:m:s") }}
+            </dd>
+
+            <dt>
+                Numéro
+            </dt>
+            <dd>
+                {{ user.num }}
+            </dd>
+
+            <dt>
+                Adresse
+            </dt>
+            <dd>
+                {{ user.address.streetNb }} {{ user.address.streetName }} <br />
+                {% if user.address.complement is not null %}
+                    {{ user.address.complement }} <br />
+                {% endif %}
+                {{ user.address.zipCode }}, {{ user.address.town }}, {{ user.address.country }}
+            </dd>
+
+            <dt>
+                Administateur d'ajout
+            </dt>
+            <dd>
+                {{ nameAdminAdd }}
+            </dd>
+
+            <dt>
+                Date d'ajout
+            </dt>
+            <dd>
+                {{ user.dateAdd|date("d/m/Y h:m:s") }}
+            </dd>
+
+            {% if user.userUpdate is not null %}
+                <dt>
+                    Administateur de mise à jour
+                </dt>
+                <dd>
+                    {{ nameUserUpdate }}
+                </dd>
+
+                <dt>
+                    Date de mise à jour
+                </dt>
+                <dd>
+                    {{ user.dateUpdate|date("d/m/Y h:m:s") }}
+                </dd>
+            {% endif %}
+        </dl>
+    </div>
+    <p>
+        <a href="{{ path('a2_user_index') }}">Retour à la liste</a>
+    </p>
+
+{% endblock content %}
