Ajout du lien vers la creation d'un nouvel utilisateur

--- a/src/A2/UserBundle/Resources/views/User/index.html.twig
+++ b/src/A2/UserBundle/Resources/views/User/index.html.twig
@@ -3,6 +3,7 @@
 {% block content %}
 
     <h2>Liste des Utilisateurs</h2>
+    <p><a href="{{ path('fos_user_registration_register') }}">Créer un nouvel utilisateur</a></p>
 
     {{ form_start(form) }}
     {{ form_errors(form) }}
