--- a/src/A2/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/A2/UserBundle/Resources/views/Security/login.html.twig
@@ -14,8 +14,8 @@
             Le concept est l'utilisation de l'application par 3 différents type d'utilisateur :
         </p>
         <p style="margin-left: 30px"> - L'administrateur, chargé de passer les différentes commandes et avoir un oeil sur l'ensemble des activités (<span style="color: red">Username :</span> testAdmin <span style="color: red">mdp :</span> passAdmin)</p>
-        <p style="margin-left: 30px"> - Le manager, dirige un entrepôt et complète les informations concernant les arrivages dans son entrepôt (<span style="color: red">Non disponibe pour le moment</span>)</p>
-        <p style="margin-left: 30px"> - Le vendeur, travail dans un entrepôt et procède à des ventes de voitures (<span style="color: red">Non disponibe pour le moment</span>)</p>
+        <p style="margin-left: 30px"> - Le manager, dirige un entrepôt et complète les informations concernant les arrivages dans son entrepôt (<span style="color: red">Username :</span> testManager <span style="color: red">mdp :</span> passManager)</p>
+        <p style="margin-left: 30px"> - Le vendeur, travail dans un entrepôt et procède à des ventes de voitures (<span style="color: red">Username :</span> testSeller <span style="color: red">mdp :</span> passSeller)</p>
 
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
